docs: update blog

--- a/packages/community/src/components/Workspace/Footer.astro
+++ b/packages/community/src/components/Workspace/Footer.astro
@@ -24,22 +24,22 @@ const nav = [{
   name: 'Community',
   children: [{
     name: 'Discord',
-    link: '',
+    link: 'https://discord.gg/z3NKNT6D2f',
   }, {
     name: 'Zhihu',
-    link: '',
+    link: 'https://www.zhihu.com/org/meng-shu-ke-ji',
   }],
 }, {
   name: 'Help',
   children: [{
     name: 'Github Discussions',
-    link: '',
+    link: 'https://github.com/dream-num/univer/discussions',
   }, {
     name: 'Troubleshooting',
-    link: '',
+    link: '/guides/troubleshooting/',
   }, {
     name: 'Bug Report',
-    link: '',
+    link: 'https://github.com/dream-num/univer/issues',
   }],
 }]
 ---
