docs: update workspace blog

--- a/packages/community/src/components/Footer/index.astro
+++ b/packages/community/src/components/Footer/index.astro
@@ -47,11 +47,10 @@ const l = useI18nUrl(lang)
 
   <p class="copyright">
     <span>{t('footer.copyright')}</span>
-    <!-- <span>服务协议 | 隐私政策</span> -->
   </p>
 </footer>
 
-<style lang="less" scoped>
+<style lang="less">
 .footer {
   margin-top: 3rem;
   padding-bottom: 2rem;
