--- a/packages/community/src/components/Workspace/Footer.astro
+++ b/packages/community/src/components/Workspace/Footer.astro
@@ -61,7 +61,7 @@ const nav = [{
   </nav>
 
   <p class="copyright">
-    Copyright &copy; 2021-2024 Mengshu. All Rights Reserved. Copyright &copy; 2021-2024 Dreamnum Co,Ltd.
+    Copyright © 2019-2024 Shanghai DreamNum Technology Co., Ltd. All rights reserved.
   </p>
 </footer>
 
