--- a/packages/community/src/pages/workspace/blog.astro
+++ b/packages/community/src/pages/workspace/blog.astro
@@ -10,7 +10,7 @@ const headings = Post.getHeadings()
 ---
 
 <BlankLayout lang="en-us" title="Univer Workspace | Univer">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
 
   <section class="page">
     <Header />
@@ -20,13 +20,14 @@ const headings = Post.getHeadings()
       <p>{frontmatter.description}</p>
 
       <section class="video">
-        <iframe
-          src={frontmatter.video}
-          title="Rick Astley - Never Gonna Give You Up (Official Music Video)"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        />
+        <div class="video-container">
+          <iframe
+            src={frontmatter.video}
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          />
+        </div>
       </section>
     </header>
 
@@ -63,7 +64,7 @@ const ids = Array.from($headings).map($a => $a.href.split('#')[1])
 const $titles = ids.map(id => document.getElementById(id))
 
 window.addEventListener('scroll', () => {
-  const scrollPosition = window.scrollY;
+  const scrollPosition = window.scrollY + 72;
 
   $titles.forEach((heading, index) => {
     const headingPosition = heading.offsetTop;
@@ -81,9 +82,12 @@ window.addEventListener('scroll', () => {
   font-family: Poppins;
 
   .header {
-    max-width: 1200px;
+    max-width: 1440px;
     margin: 0 auto 72px auto;
-    padding: 72px 32px 0;
+    padding: 72px 78px 0;
+    @media (max-width: 1024px) {
+      padding: 0 20px;
+    }
 
     h1 {
       margin: 0 0 32px;
@@ -94,6 +98,10 @@ window.addEventListener('scroll', () => {
       font-weight: 600;
       line-height: 56px;
       letter-spacing: 0.56px;
+      @media (max-width: 1024px) {
+        font-size: 44px;
+        letter-spacing: 0.44px;
+      }
     }
 
     p {
@@ -106,30 +114,50 @@ window.addEventListener('scroll', () => {
       font-style: normal;
       font-weight: 400;
       line-height: 36px;
+      @media (max-width: 1024px) {
+        width: 100%;
+      }
     }
 
     .video {
-      height: 568px;
-      padding: 16px;
+      width: 100%;
+      padding: 8px;
       background: #F0F3FF;
       border-radius: 16px;
 
-      iframe {
-        width: 100%;
-        height: 100%;
-        border-radius: 16px;
+      .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+
+        iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border-radius: 16px;
+        }
       }
     }
   }
 
   .post {
-    max-width: 1200px;
+    max-width: 1440px;
     margin: 0 auto 72px auto;
-    padding: 0 32px;
+    padding: 0 78px;
     display: grid;
     grid-template-columns: 192px 1fr 192px;
+    @media (max-width: 1024px) {
+      padding: 0;
+      display: block;
+    }
 
     .toc {
+      @media (max-width: 1024px) {
+        display: none;
+      }
+
       .container {
         position: sticky;
         top: 140px;
@@ -174,11 +202,12 @@ window.addEventListener('scroll', () => {
       padding: 0 20px;
 
       :global(h2) {
-        margin: 0 0 40px;
+        margin: 0 0 16px;
         color: #0F172A;
         font-size: 36px;
         font-weight: 500;
         line-height: 44px;
+        scroll-margin-top: 68px;
       }
 
       :global(h3) {
@@ -190,6 +219,9 @@ window.addEventListener('scroll', () => {
       }
 
       :global(ul) {
+        margin: 0 0 24px 18px;
+        padding: 0;
+
         :global(li) {
           font-size: 18px;
           font-weight: 300;
@@ -205,18 +237,20 @@ window.addEventListener('scroll', () => {
       }
 
       :global(table) {
+        margin: 0 auto 24px;
+        position: relative;
         border-spacing: 0;
+        white-space: nowrap;
         word-break: break-word;
         cursor: text;
         table-layout: fixed;
-        position: relative;
         border-collapse: initial;
 
         :global(tr) {
           :global(td),
           :global(th) {
             min-height: 38px;
-            min-width: 120px;
+            min-width: 180px;
             border-right: 1px solid #dee0e3;
             border-bottom: 1px solid #dee0e3;
             padding: 10px 16px;
@@ -235,7 +269,6 @@ window.addEventListener('scroll', () => {
       :global(video) {
         width: 100%;
         border-radius: 20px;
-        border: 10px solid #F0F3FF;
         display: block;
       }
 
@@ -243,13 +276,65 @@ window.addEventListener('scroll', () => {
         width: 100%;
         margin-top: -0.5em;
         margin-bottom: 40px;
-        font-size: 14px;
+        font-size: 16px;
+        font-style: italic;
         text-align: center;
         display: block;
+
+        :global(a) {
+          text-decoration: none;
+        }
+      }
+
+      :global(.note) {
+        margin: 0 0 24px;
+        padding: 16px;
+        background: #F0F3FF;
+        border-radius: 20px;
+        border: 1px solid #0038FF;
+        display: flex;
+        gap: 16px;
+
+        :global(.note-symbol) {
+          line-height: 32px;
+        }
+
+        :global(p) {
+          margin-bottom: 0;
+        }
+      }
+
+      :global(.two-columns) {
+        margin: 0 0 24px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        :global(>div) {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+
+          :global(a) {
+            color: #0038FF;
+            text-decoration-line: underline;
+            text-decoration-thickness: from-font;
+            text-underline-position: from-font;
+          }
+        }
+      }
+
+      :global(blockquote) {
+        margin: 0 0 24px;
+        padding-left: 16px;
+        border-left: 4px solid #F0F3FF;
+
+        :global(p) {
+          margin-bottom: 0;
+        }
       }
 
       :global(p) {
-        margin: 24px 0;
+        margin: 0 0 24px;
         color: #0F172A;
         font-size: 18px;
         font-weight: 300;
@@ -258,7 +343,7 @@ window.addEventListener('scroll', () => {
         :global(img) {
           width: 100%;
           border-radius: 20px;
-          border: 10px solid #F0F3FF;
+          border: 8px solid #F0F3FF;
           display: block;
         }
 
@@ -270,6 +355,18 @@ window.addEventListener('scroll', () => {
           text-decoration-line: underline;
           text-decoration-thickness: from-font;
           text-underline-position: from-font;
+        }
+
+        :global(strong) {
+          font-weight: 600;
+        }
+
+        :global(code) {
+          color: #0038FF;
+          padding: 2px 4px;
+          font-size: 16px;
+          background: #F0F3FF;
+          border-radius: 6px;
         }
       }
     }
