docs: update workspace blog

--- a/packages/community/src/components/Footer/index.astro
+++ b/packages/community/src/components/Footer/index.astro
@@ -24,7 +24,7 @@ const l = useI18nUrl(lang)
     <div class="column">
       <label>{t('footer.nav.company.title')}</label>
       <a href={l('/blog')}>{t('footer.nav.company.blog')}</a>
-      <a href={l('/enterprises#获取商业版')}>{t('footer.nav.company.concat')}</a>
+      <a href={l('/workspace#contact-us')}>{t('footer.nav.company.concat')}</a>
     </div>
     <div class="column">
       <label>{t('footer.nav.resource.title')}</label>
