--- a/packages/community/src/components/Workspace/Footer.astro
+++ b/packages/community/src/components/Workspace/Footer.astro
@@ -6,12 +6,12 @@ const nav = [{
     link: '/workspace/blog',
   }, {
     name: 'Contact us',
-    link: '',
+    link: '/workspace#contact-us',
   }],
 }, {
   name: 'Resources',
   children: [{
-    name: 'Developer Docs',
+    name: 'Guides',
     link: '/guides/introduction',
   }, {
     name: 'Plugins',
