--- a/packages/community/src/components/Wrapper/index.astro
+++ b/packages/community/src/components/Wrapper/index.astro
@@ -24,12 +24,12 @@ const { lang, title } = Astro.props
     </script>
 
     <meta charset="UTF-8" />
-    <meta name="description" content="The next-generation open source office suite. Spreedsheets, documents, slides and more." />
+    <meta name="description" content="The next-generation open source office suite. Spreadsheets, documents, slides and more." />
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#2F80ED" />
     <!-- og -->
     <meta property="og:title" content={title} />
-    <meta property="og:description" content="The next-generation open source office suite. Spreedsheets, documents, slides and more." />
+    <meta property="og:description" content="The next-generation open source office suite. Spreadsheets, documents, slides and more." />
     <meta property="og:image" content="/og.png" />
 
     <title>{title}</title>
