docs: update blog

--- a/packages/community/src/pages/workspace/blog.astro
+++ b/packages/community/src/pages/workspace/blog.astro
@@ -295,7 +295,7 @@ window.addEventListener('scroll', () => {
         margin: 0 0 24px;
         padding: 16px;
         background: #F0F3FF;
-        border-radius: 20px;
+        border-radius: 16px;
         border: 1px solid #0038FF;
         display: flex;
         gap: 16px;
@@ -335,7 +335,7 @@ window.addEventListener('scroll', () => {
       :global(blockquote) {
         margin: 0 0 24px;
         padding-left: 16px;
-        border-left: 4px solid #F0F3FF;
+        border-left: 4px solid #0038FF;
 
         :global(p) {
           margin-bottom: 0;
