docs: update homepage

--- a/packages/community/src/components/Footer/index.astro
+++ b/packages/community/src/components/Footer/index.astro
@@ -98,7 +98,7 @@ const l = useI18nUrl(lang)
       > p {
         margin: 0;
         display: grid;
-        gap: 0.4rem;
+        // gap: 0.4rem;
         @media (max-width: 1024px) {
         }
 
