docs: update docs

--- a/packages/shared/components/Sidebar.astro
+++ b/packages/shared/components/Sidebar.astro
@@ -17,6 +17,7 @@ const packages = [
   'network',
   'rpc',
   'sheets',
+  'sheets-conditional-formatting',
   'sheets-find-replace',
   'sheets-formula',
   'sheets-numfmt',
