fix: fix dead links

--- a/packages/shared/components/Sidebar.astro
+++ b/packages/shared/components/Sidebar.astro
@@ -6,6 +6,7 @@ import { getLangFromUrl, useI18nUrl } from '../i18n/utils'
 
 const packages = [
   'core',
+  'data-validation',
   'design',
   'docs',
   'docs-ui',
@@ -18,6 +19,8 @@ const packages = [
   'rpc',
   'sheets',
   'sheets-conditional-formatting',
+  'sheets-conditional-formatting-ui',
+  'sheets-data-valiation',
   'sheets-find-replace',
   'sheets-formula',
   'sheets-numfmt',
