--- a/packages/shared/components/Sidebar.astro
+++ b/packages/shared/components/Sidebar.astro
@@ -20,7 +20,7 @@ const packages = [
   'sheets',
   'sheets-conditional-formatting',
   'sheets-conditional-formatting-ui',
-  'sheets-data-valiation',
+  'sheets-data-validation',
   'sheets-find-replace',
   'sheets-formula',
   'sheets-numfmt',
