--- a/packages/community/src/pages/playground.astro
+++ b/packages/community/src/pages/playground.astro
@@ -108,6 +108,14 @@ const children: IEmbedProps[] = [
       openFile: 'src/main.ts',
     },
   },
+  {
+    title: 'Migrate Luckysheet',
+    type: 'StackBlitz',
+    repoPath: 'awesome-univer/migrate-luckysheet',
+    openOptions: {
+      openFile: 'src/main.ts',
+    },
+  },
 ]
 
 const demo = [
